migrate to renovate and relocate snakeyaml